--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="amphtml" href="https://pub-0ff614db1a5d41ea825b248e33e22725.r2.dev/index.html">
   <meta name="google-site-verification" content="2XbRRQihl4XCsTCpyOY-b7Co_moZA0uL9SplqI8Z4Sc" />
   <title>BOOSTERJP: Agen Judi Slot Online Booster jp Gacor Resmi Termudah Maxwin Seindonesia</title>
-  <meta name="description" content="Selalu bermain judi dengan tanggung jawab, Nobitabet berkomitmen untuk menjamin keamanan dan kesejahteraan." />
+  <meta name="description" content="Selalu bermain judi dengan tanggung jawab, Boosterjp berkomitmen untuk menjamin keamanan dan kesejahteraan." />
   <meta name="keywords" content="boosterjp, Booster jp, situs boosterjp, link boosterjp, boosterjp slot, judi boosterjp, boosterjp gacor, boosterjp rtp, boosterjp online, alternatif boosterjp, boosterjp maxwin, boosterjp resmi, agen boosterjp" />
   <meta name="robots" content="index, follow" />
   <meta name="page-locale" content="id,en" />
   <meta content="true" name="HandheldFriendly" />
   <meta content="width" name="MobileOptimized" />
   <meta property="og:title" content="BOOSTERJP: Agen Judi Slot Online Booster jp Gacor Resmi Termudah Maxwin Seindonesia" />
-  <meta property="og:description" content="Selalu bermain judi dengan tanggung jawab, Nobitabet berkomitmen untuk menjamin keamanan dan kesejahteraan." />
+  <meta property="og:description" content="Selalu bermain judi dengan tanggung jawab, Boosterjp berkomitmen untuk menjamin keamanan dan kesejahteraan." />
   <meta property="og:url" content="http://boosterjp.vip.mongoengine.org/" />
   <meta property="og:site_name" content="boosterjp" />
   <meta property="og:author" content="boosterjp" />
